<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Cart"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Orders"/>
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Sign Out"/>

    </group>
    <group>
        <item
            android:id="@+id/admin_features"
            android:title="@string/admin_features">
            <menu>
                <item
                    android:id="@+id/add_category"
                    android:icon="@android:drawable/ic_input_add"
                    android:title="@string/add_category" />
                <item
                    android:id="@+id/add_food_item"
                    android:icon="@android:drawable/ic_input_add"
                    android:title="@string/add_food_items" />
                <item
                    android:id="@+id/pending_orders"
                    android:icon="@android:drawable/ic_menu_today"
                    android:title="@string/pending_orders" />
            </menu>
        </item>
    </group>

</menu>
