<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/app_edittext_bottom_margin"
    android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
    android:layout_marginTop="@dimen/app_edittext_bottom_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/app_edittext_bottom_margin">

        <TextView
            android:id="@+id/order_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordered_items"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/price_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:text="@string/total_price"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/status_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:text="@string/status"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/order_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.cardview.widget.CardView>