<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageFoodItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addFoodItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:text="@string/add_food_items"
            android:textSize="34sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:hint="@string/name_of_food_item">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_food_item" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:hint="@string/food_item_description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/food_item_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:hint="@string/image_url">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_url" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_discount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:hint="@string/discount">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/discount"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/food_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:hint="@string/price">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/categoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:paddingTop="@dimen/app_edittext_bottom_margin"
            android:paddingRight="@dimen/app_edittext_bottom_margin"
            android:text="@string/name_of_category" />

        <Spinner
            android:id="@+id/food_category_id_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_add_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:background="@color/colorAccent"
            android:text="@string/add" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>