<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/background_login_panel"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_food" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@color/colorAccentText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">


    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="37dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/SignUp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSignUp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorAccentText"
        android:text="@string/SignIn" />


</RelativeLayout>