<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:text="@string/add_category"
            android:textSize="34sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:hint="@string/name_of_category">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_category" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_url_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:hint="@string/image_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_url" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_edittext_bottom_margin"
            android:layout_marginLeft="@dimen/app_edittext_bottom_margin"
            android:layout_marginTop="@dimen/app_edittext_bottom_margin"
            android:layout_marginEnd="@dimen/app_edittext_bottom_margin"
            android:layout_marginRight="@dimen/app_edittext_bottom_margin"
            android:background="@color/colorAccent"
            android:text="@string/add" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>